# rastrex

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.devcontainer/: containerfile
include/rastrex/: rastrex_api.hpp
src/: rastrex_api.cxx  test_rastrex.cxx
